--- a/2025-ibis_diversity_statement_workshop.Rmd
+++ b/2025-ibis_diversity_statement_workshop.Rmd
@@ -136,6 +136,7 @@ This exercise is essentially creating a positionality statement - let's walk thr
 - If you don’t have much experience, speak to where you will implement inclusive practices. Demonstrate what you’ve learned and how you can implement it. (this signals your understanding and shows a willingness to act)
 - Limited experience does not make you a terrible educator, just a new one. (Don't let your beliefs around facts to supersede the facts themselves)
 - Writing a positionality statement first (like we modeled, will make this whole process clearer and result in a clear statement)
+- Storyboarding or concept mapping your package makes this easier to visualize
 - Updating your CV before listing your in-statement examples to reflect your innovations in teaching/ mentoring (shoutout KPJ)
 - Tailor it to the institution and position
 - Don't waste space restating the pieces you've clearly discussed in your teaching and research statements
