--- a/2025-ibis_diversity_statement_workshop.Rmd
+++ b/2025-ibis_diversity_statement_workshop.Rmd
@@ -6,7 +6,7 @@ date: "April 25, 2025"
 output: 
   ioslides_presentation:
     css: styles.css
-    logo: images/uw_logo.png
+    logo: images/alt_uw_logo.png
 ---
 
 ```{r setup, include=FALSE}
@@ -17,7 +17,9 @@ knitr::opts_chunk$set(echo = FALSE)
 
 # Welcome!
 
+<div class="notes">
 - Grounding, taking 2 seconds to get everyone to change gears into our space & possibly a land acknowledgement
+</div>
 ---
 
 ## About Me | 
