--- a/2025-ibis_diversity_statement_workshop.Rmd
+++ b/2025-ibis_diversity_statement_workshop.Rmd
@@ -52,9 +52,9 @@ Marine Bio '21
 </div>
 
 <div style="display: flex; justify-content: center; gap: 2em;">
-  <img src="images/2023yi_dock.jpeg" style="height: 120px; width: auto; object-fit: cover; border-radius: 6px;" />
-  <img src="images/outplant.jpg" style="height: 120px; width: auto; object-fit: cover; border-radius: 6px;" />
-  <img src="images/2024_innovators.jpg" style="height: 120px; width: auto; object-fit: cover; border-radius: 6px;" />
+  <img src="images/2023yi_dock.jpeg" style="height: 160px; width: auto; object-fit: cover; border-radius: 6px;" />
+  <img src="images/outplant.jpg" style="height: 160px; width: auto; object-fit: cover; border-radius: 6px;" />
+  <img src="images/2024_innovators.jpg" style="height: 160px; width: auto; object-fit: cover; border-radius: 6px;" />
 </div>
 
 <div style="font-size: 70%; text-align: center; margin-top: 1em; color: #85754d;">
@@ -66,7 +66,7 @@ Marine Bio '21
 
 <div style="text-align: center;">
   <img src="images/int_kids.jpeg" style="width:30%; margin: 0 1%;" />
-  <img src="images/2024yi_group.jpeg" style="width:30%; margin: 0 1%;" />
+  <img src="images/24yi_group.jpeg" style="width:30%; margin: 0 1%;" />
   <img src="images/sicb2025.jpeg" style="width:30%; margin: 0 1%;" />
 </div>
 
@@ -190,38 +190,48 @@ Preparation | Things You'll Need
 2) Writing Tool/ Laptop
 3) Your CV
 
-## {.flexbox .vcenter}
+## {.flexbox .vcenter .bigger}
+<font size="12">
 Process <br> Step 1 of 5: Institution's MVV
+</font>
 
 1) What resonates?
 2) What's itchy?
 3) What feels genuine?
 4) What's aspirational?
 
-## {.flexbox .vcenter}
+## {.flexbox .vcenter .bigger}
+<font size="12">
 Process <br> Step 2 of 5: Reflection
+</font>
 
 1) Identity/ Privilege Wheel inventory
 2) Values + Teaching Philosophy Alignment
 3) Knowledge of current research in pedagogy/ research/ student engagement
 
-## {.flexbox .vcenter}
+## {.flexbox .vcenter .bigger}
+<font size="12">
 Process <br> Step 3 of 5: Run the Stats
+</font>
 
 1) List SPECIFIC activities you’ve created/ participated in
 2) List SPECIFIC organizations you’ve created/ participated in
 3) List SPECIFIC teaching tactics/ strategies you’ve employed 
 4) List SPECIFIC research process accommodations/ protocols/ etc. that you’ve created
 
-## {.flexbox .vcenter}
+## {.flexbox .vcenter .bigger}
+<font size="12">
 Process <br> Step 4 of 5: Synthesis
+</font>
 
 1) What is sticking out to you?
 2) Are you balanced across the 3 areas (research, teaching, service)
 3) How are you feeling? 
 
-## {.flexbox .vcenter}
+## {.flexbox .vcenter .bigger}
+<font size="12">
 Process <br> Step 5 of 5: Drafting the Statement
+</font>
 
 - Framing here is key 
 - Reinforce how you and your work align with the institution’s MVV
@@ -282,8 +292,8 @@ Reminders
 Resources
 
 <div style="display: flex; justify-content: space-between; align-items: center;">
-  <img src="images/gh_logo.jpeg" style="width:50%;"/>
-  <img src="images/linktreesvg.svg" style="width:50%;"/>
+  <img src="images/gh_logo.jpeg" style="width:30%;"/>
+  <img src="images/linktreesvg.svg" style="width:30%;"/>
 </div>
 
 <div style="font-size: 90%; text-align: center; margin-top: 1em; color: #85754d;">
