--- a/custom.tex
+++ b/custom.tex
@@ -2,7 +2,7 @@
 
 % Add watermark (optional)
 \usepackage{draftwatermark}
-\SetWatermarkText{Chris Mantegna}
+\SetWatermarkText{Created by Chris Mantegna University of Washington 2025}
 \SetWatermarkScale{0.3}
 \SetWatermarkColor[gray]{0.85}
 
@@ -10,7 +10,7 @@
 \usepackage{fancyhdr}
 \pagestyle{fancy}
 \fancyhf{}
-\lfoot{Chris Mantegna | chris@email.com}
+\lfoot{Chris Mantegna | mantegna@uw.edu}
 \rfoot{\thepage}
 
 % Allow Quarto to inject content here
